force-app/main/default/objects/Billing_Profile__c/Billing_Profile__c.object-meta.xml
<CustomObject>
    <label>Billing Profile</label>
    <nameField>
        <label>Billing Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>