force-app/main/default/objects/Billing_Profile__c/fields/BCC__c.field-meta.xml
<CustomField>
    <fullName>BCC__c</fullName>
    <description>BCC email addresses for invoice emailing</description>
    <label>BCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>