force-app/main/default/objects/Billing_Profile__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Profiles</relationshipLabel>
    <relationshipName>Billing_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>