force-app/main/default/objects/Billing_Profile__c/fields/Billing_Location__c.field-meta.xml
<CustomField>
    <fullName>Billing_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Location/Worksite entity on Company record</description>
    <label>Billing Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Profiles</relationshipLabel>
    <relationshipName>Billing_Profile_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>