force-app/main/default/objects/Billing_Profile__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <description>CC email addresses for invoice emailing</description>
    <label>CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>