force-app/main/default/objects/Billing_Profile__c/fields/Custom_Field_1_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_1_Label__c</fullName>
    <description>Display label for Custom Field 1 on invoices and timesheet entry</description>
    <label>Custom Field 1 Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>