force-app/main/default/objects/Billing_Profile__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Do Not Email (VMS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>