force-app/main/default/objects/Billing_Profile__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>Email template to use for invoice emailing</description>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>