force-app/main/default/objects/Billing_Profile__c/fields/Files_to_Include__c.field-meta.xml
<CustomField>
    <fullName>Files_to_Include__c</fullName>
    <description>Files to include with invoice (e.g., Timesheet)</description>
    <label>Files to Include</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timesheet</fullName>
                <default>true</default>
                <label>Timesheet</label>
            </value>
            <value>
                <fullName>Invoice Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>