force-app/main/default/objects/Billing_Profile__c/fields/Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template__c</fullName>
    <description>Invoice template type to use for PDF generation - determines layout and per diem summary display</description>
    <label>Invoice Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Per Diem Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>