force-app/main/default/objects/Billing_Profile__c/fields/Invoicing_Company__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Profiles</relationshipLabel>
    <relationshipName>Billing_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>